create trip, grpc client
